# Aether-Intelligence

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Launch Aether Intelligence.cmd  MACOS_BUILD_HANDOFF.md  README.md  SIGNING.md
app/: index.html  package-lock.json  package.json
app/src/: AnnotationEditor.tsx  App.css  App.tsx  BrowserPane.tsx  Editor.tsx  GameMap.tsx  api.ts  main.tsx  turndown-plugin-gfm.d.ts
app/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  overlay.rs
app/src/overlay/: Checklist.tsx  Drawer.tsx  Overlay.tsx  agent.ts  overlay.css
backend/: app.py  attachments.py  config.py  overlay_checklist.py  overlay_watches.py  pairing.py  paths.py  prompts.py  requirements.txt  run_backend.py  subscription.py  updates.py  usage.py  workspaces.py
backend/annotate/: __init__.py  annotate.py
backend/keys/: __init__.py  vault.py
backend/llm/: __init__.py  agent_engine.py  client.py  dispatch.py  interactive.py  looplog.py  registry.py  suggest.py  tools.py
backend/sources/: __init__.py  aethercurrents.py  cache.py  eorzeadb.py  exd_schema.json  gameclient.py  gamemap.py  gameversion.py  garland.py  gdb.py  gearsets.py  icons.py  lodestone.py  lodestone_character.py  lodestone_http.py  mappins.py  maps.py  patchnotes.py  realmremapped.py  sqex_forum.py  sqpack.py  supplemental.py  tex.py  universalis.py  wiki.py
docs/: companion-desktop-handoff.md  ios-companion-garland-db.md  ios-companion-mac-guide.md  ios-companion-phase-0.md  ios-companion-phase-1.md  ios-companion-phase-2.md  ios-companion-phase-3.md  overlay-spec.md  profile-workspaces-spec.md
mobile/: .gitignore  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
mobile/ios/App/: Podfile
mobile/ios/App/App/: Info.plist
mobile/ios/App/App.xcodeproj/: project.pbxproj
mobile/src/: App.tsx  styles.css
mobile/src/components/: DbIcon.tsx  TabBar.tsx
mobile/src/lib/: client.ts  db.ts  icons.ts  pairing.ts  secure.ts  store.ts
mobile/src/screens/: Chat.tsx  Connect.tsx  Database.tsx  DatabaseTab.tsx  DbList.tsx  DbRecord.tsx  Offline.tsx  Pair.tsx  Paired.tsx
scripts/: build-backend.ps1  build-backend.sh  build-installer.ps1  build-installer.sh  mirror-to-drive.ps1  start-dev.ps1
supplemental/: LICENSE-ATTRIBUTION.txt
tools/: README.md  derive_schema.py  eval_facts.py  gemini_image.py  requirements.txt  sqpack_poc.py
tools/portrait-sidecar/: CharacterPortrait.cs  Mdl.cs  Mtrl.cs  Png.cs  PortraitSidecar.csproj  Program.cs  Renderer.cs  Textures.cs
