[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable` enables multiwebview (Window::add_child) for the embedded browser pane.
tauri = { version = "2", features = ["unstable", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Screen awareness (overlay §6.5): downscale + JPEG-encode the GDI capture.
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"

# Windows-only: title-bar icon strip + the embedded browser's adblocker
# (WebView2 WebResourceRequested interception). webview2-com is pinned to the
# same minor as tauri-runtime-wry's so the COM types line up.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_System_WinRT",
] }
webview2-com = "0.38"

